--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images\cloud.png" alt="cloud-img">
     <h1 style="margin-top:0px;
-                 margin-botton:0px;">I am Joel</h1>
+                 margin-bottom:0px;">I am Joel</h1>
     <h2> <span class="pro">Pro</span>grammer</h2>
     <img class="bottom-cloud" src="images\cloud.png" alt="cloud-img">
     <img src="images\mountain.png" alt="mountain-img">
@@ -60,3 +60,4 @@
 </body>
 
 </html>
+
